@@ -6,6 +6,8 @@
 * Fix opening of hub from favorites hubs list by [Enter] key from keyboard.
 * Delete embedded copy of miniupnpc library: it was extremely outdated and
   system library should be used in any case.
+* Add support of miniupnpc >= 1.6. Older versions of miniupnpc are not
+  supported anymore.
 * Core: fix build with GCC 8.x.
 * Core: fix some compilation warnings in builds with GCC >= 6.x.
 * Core: add compatibility with OpenSSL >= 1.1.0.
